--- a/package.json
+++ b/package.json
@@ -9,22 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-community/geolocation": "^3.2.0",
+    "@react-native-community/hooks": "^3.0.0",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "axios": "^1.6.7",
-    "expo": "^49.0.23",
-    "expo-camera": "~13.4.4",
-    "expo-image-manipulator": "~11.3.0",
-    "expo-image-picker": "~14.3.2",
-    "expo-location": "~16.1.0",
-    "expo-media-library": "~15.4.1",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^50.0.15",
+    "expo-camera": "~14.1.2",
+    "expo-image-manipulator": "~11.8.0",
+    "expo-image-picker": "~14.7.1",
+    "expo-location": "~16.5.5",
+    "expo-media-library": "~15.9.1",
+    "expo-status-bar": "~1.11.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-geocode": "^1.0.0-alpha.1",
-    "react-native": "0.72.10",
+    "react-native": "0.73.6",
     "react-native-autocomplete-dropdown": "^3.1.5",
     "react-native-autocomplete-input": "^5.4.0",
     "react-native-currency-input": "^1.1.1",
@@ -32,11 +34,11 @@
     "react-native-element-dropdown": "^2.10.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-image-picker": "^7.1.2",
-    "react-native-maps": "1.7.1",
+    "react-native-maps": "1.10.0",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-table-component": "^1.2.2"
   },
   "devDependencies": {
