--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.18",
     "axios": "^1.6.7",
     "expo": "^50.0.15",
+    "expo-build-properties": "~0.11.1",
     "expo-camera": "~14.1.2",
     "expo-image-manipulator": "~11.8.0",
     "expo-image-picker": "~14.7.1",
@@ -34,13 +35,13 @@
     "react-native-element-dropdown": "^2.10.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-image-picker": "^7.1.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.10.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
-    "react-native-table-component": "^1.2.2",
-    "expo-build-properties": "~0.11.1"
+    "react-native-table-component": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
