--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.10.0",
     "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
