--- a/package.json
+++ b/package.json
@@ -9,40 +9,43 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "7.7.0",
     "@react-native-community/geolocation": "^3.2.0",
     "@react-native-community/hooks": "^3.0.0",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "axios": "^1.6.7",
-    "expo": "^50.0.15",
-    "expo-build-properties": "~0.11.1",
-    "expo-camera": "~14.1.2",
-    "expo-image-manipulator": "~11.8.0",
-    "expo-image-picker": "~14.7.1",
-    "expo-location": "~16.5.5",
-    "expo-media-library": "~15.9.1",
-    "expo-status-bar": "~1.11.1",
+    "expo": "51",
+    "expo-build-properties": "~0.12.1",
+    "expo-camera": "~15.0.5",
+    "expo-image-manipulator": "~12.0.3",
+    "expo-image-picker": "~15.0.4",
+    "expo-location": "~17.0.1",
+    "expo-media-library": "~16.0.3",
+    "expo-status-bar": "~1.12.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-geocode": "^1.0.0-alpha.1",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-autocomplete-dropdown": "^3.1.5",
     "react-native-autocomplete-input": "^5.4.0",
     "react-native-currency-input": "^1.1.1",
     "react-native-date-picker": "^4.3.7",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-maps": "1.10.0",
+    "react-native-maps": "1.14.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-root-toast": "^3.5.1",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
-    "react-native-table-component": "^1.2.2"
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "15.2.0",
+    "react-native-table-component": "^1.2.2",
+    "expo-splash-screen": "~0.27.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
