--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "7.7.0",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/geolocation": "^3.2.0",
     "@react-native-community/hooks": "^3.0.0",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "axios": "^1.6.7",
-    "expo": "51",
+    "expo": "51.0.7",
     "expo-build-properties": "~0.12.1",
-    "expo-camera": "~15.0.5",
-    "expo-image-manipulator": "~12.0.3",
-    "expo-image-picker": "~15.0.4",
+    "expo-camera": "15.0.8",
+    "expo-image-manipulator": "12.0.5",
+    "expo-image-picker": "15.0.5",
     "expo-location": "~17.0.1",
     "expo-media-library": "~16.0.3",
     "expo-status-bar": "~1.12.1",
