--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native": "0.74.1",
     "react-native-autocomplete-dropdown": "^3.1.5",
     "react-native-autocomplete-input": "^5.4.0",
+    "react-native-background-actions": "^3.0.1",
     "react-native-currency-input": "^1.1.1",
     "react-native-date-picker": "^4.3.7",
     "react-native-dropdown-picker": "^5.4.6",
@@ -46,7 +47,8 @@
     "react-native-screens": "3.31.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "15.2.0",
-    "react-native-table-component": "^1.2.2"
+    "react-native-table-component": "^1.2.2",
+    "expo-task-manager": "~11.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
