--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "axios": "^1.6.7",
-    "expo": "51.0.8",
-    "expo-build-properties": "~0.12.1",
-    "expo-camera": "15.0.9",
+    "expo": "51.0.10",
+    "expo-build-properties": "0.12.2",
+    "expo-camera": "15.0.10",
     "expo-image-manipulator": "12.0.5",
     "expo-image-picker": "15.0.5",
     "expo-location": "~17.0.1",
@@ -48,7 +48,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "15.2.0",
     "react-native-table-component": "^1.2.2",
-    "expo-task-manager": "~11.8.1"
+    "expo-task-manager": "11.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
