--- a/package.json
+++ b/package.json
@@ -10,25 +10,28 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/geolocation": "^3.2.0",
     "@react-native-community/hooks": "^3.0.0",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "axios": "^1.6.7",
-    "expo": "51.0.10",
-    "expo-build-properties": "0.12.2",
-    "expo-camera": "15.0.10",
+    "expo": "~51.0.14",
+    "expo-build-properties": "~0.12.3",
+    "expo-camera": "~15.0.11",
+    "expo-checkbox": "~3.0.0",
     "expo-image-manipulator": "12.0.5",
     "expo-image-picker": "15.0.5",
     "expo-location": "~17.0.1",
     "expo-media-library": "~16.0.3",
-    "expo-splash-screen": "~0.27.4",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
+    "expo-task-manager": "11.8.2",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-geocode": "^1.0.0-alpha.1",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-autocomplete-dropdown": "^3.1.5",
     "react-native-autocomplete-input": "^5.4.0",
     "react-native-background-actions": "^3.0.1",
@@ -48,7 +51,8 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "15.2.0",
     "react-native-table-component": "^1.2.2",
-    "expo-task-manager": "11.8.2"
+    "react-native-wifi-reborn": "^4.12.1",
+    "@react-native-community/netinfo": "11.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
